--- a/spring-cloud-user/application-prod.yml
+++ b/spring-cloud-user/application-prod.yml
@@ -10,8 +10,8 @@ logging:
 # 安全认证服务配置
 security:
   user:
-    name: signit-prod
-    password: signit-prod-password
+    name: user
+    password: password
 
 # eureka客户端信息配置
 eureka:
